$Id: History,v 1.1 1999-01-07 16:06:20 gunter Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N06 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

21st August 1998  John Allison
- Changed file names from N06* to ExN06*.

9th August 1998   John Allison
- Changed G4UIterminal to G4UIGAG.

April 09, 98 G. Cosmo

- Created.