@@ -20,12 +20,12 @@ class ExN06RunAction : public G4UserRunAction
   public:
 
     ExN06RunAction();
-    ~ExN06RunAction();
+    virtual ~ExN06RunAction();
 
   public:
 
-    void BeginOfRunAction(G4Run* aRun);
-    void EndOfRunAction(G4Run* aRun);
+    virtual void BeginOfRunAction(const G4Run* aRun);
+    virtual void EndOfRunAction(const G4Run* aRun);
 
   private:
 
