@@ -1,4 +1,4 @@
-$Id: History,v 1.1 1999-01-07 16:06:20 gunter Exp $
+$Id: History,v 1.2 1999-04-16 12:08:12 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,9 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+16th April 1999 H.Kurashige
+- modify ExN06RunAction 
+- modify ExN06PhysicsList::SetCuts
 
 21st August 1998  John Allison
 - Changed file names from N06* to ExN06*.
